[package]
name = "slotmap"
version = "0.2.0"  # Remember to update html_root_url!
authors = ["Orson Peters <orsonpeters@gmail.com>"]
description = "Slotmap data structure"
license = "Zlib"
repository = "https://github.com/orlp/slotmap"
readme = "README.md"
keywords = ["slotmap", "storage", "allocator", "stable", "reference"]
categories = ["data-structures", "memory-management", "caching"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
quickcheck = "0.6"
