[package]
name = "slotmap"
version = "0.4.0"  # Remember to update html_root_url!
edition = "2018"
authors = ["Orson Peters <orsonpeters@gmail.com>"]
description = "Slotmap data structure"
license = "Zlib"
repository = "https://github.com/orlp/slotmap"
readme = "README.md"
keywords = ["slotmap", "storage", "allocator", "stable", "reference", "generational", "arena"]
categories = ["data-structures", "memory-management", "caching"]

[features]
default = ["std"]
unstable = []
std = []

[dependencies]
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }

[dev-dependencies]
fxhash = "0.2.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
quickcheck = "0.8"

[build-dependencies]
rustversion = "1.0.3"
